--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.4",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
